# im-on-my-way-to-mars

./: Cargo.toml  Dockerfile  development.pem  development_certificate.pem  docker-compose.yml
db/: create.sql  seed.sql
src/: application.rs  banner.rs  banner.txt  client_verifier.rs  duration.rs  gemini.rs  main.rs  response.rs  server.rs  storage.rs
