[package]
name = "namushul"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.36" # Handling TLS
structopt = "0.3" # Parsing system args
hex = "0.4.3" # For printing hex
url = "2.2.2" # For parsing URLs in requests
percent-encoding = "2.1.0" # For parsing the query string in URLs
postgres = "0.19.1" # For persisting data using PostgreSQL